Add ignored directories brought by node-webkit

--- a/.gitignore
+++ b/.gitignore
@@ -230,3 +230,8 @@ v8.log
 /webkit/data/xbm_decoder
 /x86-generic_out/
 /xcodebuild
+# Dependencies of the node-webkit project
+/third_party/libuv
+/third_party/nwebkit
+/third_party/node
+/cef
