Add ios-device-xcode-clang as a 50% CQ experiment
BUG=661612
R=dpranke@chromium.org

Review URL: https://codereview.chromium.org/2509363004 .

Cr-Commit-Position: refs/heads/master@{#433138}

--- a/infra/config/cq.cfg
+++ b/infra/config/cq.cfg
@@ -60,6 +60,10 @@ verifiers {
     buckets {
       name: "master.tryserver.chromium.mac"
       builders { name: "ios-device" }
+      builders {
+        name: "ios-device-xcode-clang"
+        experiment_percentage: 50
+      }
       builders { name: "ios-simulator" }
       builders {
         name: "ios-simulator-xcode-clang"
