[Autofill]Enable mojo AutofillDriver for android_webview.
BUG=662040
TBR=sgurun@chromium.org

Review-Url: https://codereview.chromium.org/2491103003
Cr-Commit-Position: refs/heads/master@{#433418}
(cherry picked from commit e404109db1d011479ea0fee59c5d415f44d73b22)

Review URL: https://codereview.chromium.org/2522813002 .

Cr-Commit-Position: refs/branch-heads/2883@{#645}
Cr-Branched-From: 614d31daee2f61b0180df403a8ad43f20b9f6dd7-refs/heads/master@{#423768}

--- a/android_webview/BUILD.gn
+++ b/android_webview/BUILD.gn
@@ -480,6 +480,7 @@ source_set("common") {
     "//android_webview/common:version",
     "//android_webview/native:native",
     "//cc/surfaces",
+    "//components/autofill/content/browser",
     "//components/autofill/content/renderer",
     "//components/cdm/browser",
     "//components/cdm/renderer",
@@ -517,6 +518,7 @@ source_set("common") {
     "//media/midi",
     "//net:extras",
     "//printing",
+    "//services/shell/public/cpp",
     "//skia",
     "//third_party/WebKit/public:blink",
     "//ui/events:gesture_detection",
