[OfflinePages] Restarts immediate processing if stopped due to no net
Adds a ConnectionNotifier helper class to be able to learn when we get
connected and uses it in the Coordinator to try immediate start when
we get connected after stopping because we had no connection.

This is a memory-only network observer so only in effect if chrome stays
resident in memory.  Otherwise, we still have the GcmNetworkManager
scheduler as a fallback.

BUG=670119

Review-Url: https://codereview.chromium.org/2546433004
Cr-Commit-Position: refs/heads/master@{#436040}
(cherry picked from commit 7103c6cef4c8ed86a090e605e9817d1852452dc2)

Review URL: https://codereview.chromium.org/2556613003 .

Cr-Commit-Position: refs/branch-heads/2924@{#358}
Cr-Branched-From: 3a87aecc31cd1ffe751dd72c04e5a96a1fc8108a-refs/heads/master@{#433059}

--- a/components/offline_pages/background/BUILD.gn
+++ b/components/offline_pages/background/BUILD.gn
@@ -10,6 +10,8 @@ static_library("background_offliner") {
   sources = [
     "change_requests_state_task.cc",
     "change_requests_state_task.h",
+    "connection_notifier.cc",
+    "connection_notifier.h",
     "device_conditions.h",
     "mark_attempt_aborted_task.cc",
     "mark_attempt_aborted_task.h",
