--- a/chrome/test/BUILD.gn
+++ b/chrome/test/BUILD.gn
@@ -694,6 +694,8 @@ if (!is_android) {
       # panels).
       sources += [
         "../browser/notifications/notification_interactive_uitest.cc",
+        "../browser/notifications/notification_interactive_uitest_mac.mm",
+        "../browser/notifications/notification_interactive_uitest_support.cc",
         "../browser/notifications/platform_notification_service_interactive_uitest.cc",
       ]
     }
