--- a/chrome/android/BUILD.gn
+++ b/chrome/android/BUILD.gn
@@ -452,6 +452,7 @@ android_library("chrome_test_java") {
     "//third_party/jsr-305:jsr_305_javalib",
     "//ui/android:ui_java",
     "//ui/android:ui_javatests",
+    "//ui/base/mojo:mojo_bindings_java",
     google_play_services_library,
   ]
 
