--- a/chrome/android/java_sources.gni
+++ b/chrome/android/java_sources.gni
@@ -650,6 +650,7 @@ chrome_java_sources = [
   "java/src/org/chromium/chrome/browser/infobar/PermissionUpdateInfoBarDelegate.java",
   "java/src/org/chromium/chrome/browser/infobar/PreviewsInfoBar.java",
   "java/src/org/chromium/chrome/browser/infobar/ReaderModeInfoBar.java",
+  "java/src/org/chromium/chrome/browser/infobar/SavePasswordInfoBar.java",
   "java/src/org/chromium/chrome/browser/infobar/SearchGeolocationDisclosureInfoBar.java",
   "java/src/org/chromium/chrome/browser/infobar/SimpleConfirmInfoBarBuilder.java",
   "java/src/org/chromium/chrome/browser/infobar/TextViewEllipsizerSafe.java",
