[Merge M69]device/fido: fix attestation format used in Touch ID
TouchIdAuthenticator was using FidoAttestationStatement, which is
fido-u2f, when it should have been using packed format. This adds a
PackedAttestationStatement class and changes the Touch ID code to use
it.

(cherry picked from commit 43debfd7d6cdb16ba2bf2c5226eeaa85d7c5387e)

Bug: 868571, 678128
Change-Id: I84626df6299d4d9df44500dcbbba365e9a30f2a2
Reviewed-on: https://chromium-review.googlesource.com/1153849
Commit-Queue: Martin Kreichgauer <martinkr@google.com>
Reviewed-by: Kim Paulhamus <kpaulhamus@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#579131}
Reviewed-on: https://chromium-review.googlesource.com/1161252
Cr-Commit-Position: refs/branch-heads/3497@{#354}
Cr-Branched-From: 271eaf50594eb818c9295dc78d364aea18c82ea8-refs/heads/master@{#576753}

--- a/device/BUILD.gn
+++ b/device/BUILD.gn
@@ -64,6 +64,7 @@ test("device_unittests") {
     "bluetooth/test/test_bluetooth_local_gatt_service_delegate.cc",
     "bluetooth/test/test_bluetooth_local_gatt_service_delegate.h",
     "bluetooth/uribeacon/uri_encoder_unittest.cc",
+    "fido/attestation_statement_formats_unittest.cc",
     "fido/ctap_request_unittest.cc",
     "fido/ctap_response_unittest.cc",
     "fido/fake_fido_discovery_unittest.cc",
